--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -67,6 +67,9 @@ header {
                 background: #ccff66;
                 padding: 0 50px;
                 border-radius: 30px;
+                &:hover {
+                    opacity: 0.8;
+                }
             }
         }
         @media (max-width: 1100px) {
