--- a/src/components/hero/Hero.scss
+++ b/src/components/hero/Hero.scss
@@ -21,6 +21,9 @@
             color: #fff;
             width: 100%;
             border-radius: 20px;
+            &:hover {
+                opacity: 0.8;
+            }
         }
 
         &__img {
